adjusted to final API (JEP 454)